# python-boilerplates

./: Dockerfile  Jenkinsfile  MANIFEST.in  NOTICE  README.rst  examples.ipynb  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_cli.txt  requirements_git_repo_tests.txt  requirements_logging.txt  requirements_packaging_tests.txt  requirements_sentry.txt  requirements_setup.txt  requirements_test.txt  setup.py
.github/workflows/: python.yml
boilerplates/: .gitignore  __init__.py  _version.py  cli.py  config.py  git_repo_tests.py  logging.py  packaging_tests.py  sentry.py  setup.py
test/: __init__.py  test_cli.py  test_config.py  test_git_repo.py  test_logging.py  test_packaging.py  test_sentry.py  test_setup.py
